[package]
name = "greentic-distributor-client"
version = "0.4.6"
edition = "2024"
description = "WIT-based client for the greentic:distributor-api@1.0.0 distributor resolver."
license = "MIT"
repository = "https://github.com/greentic/greentic-distributor-client"
homepage = "https://github.com/greentic"
readme = "README.md"
keywords = ["greentic", "distributor", "wasm", "wit"]
categories = ["network-programming", "wasm"]

[features]
default = []
http-runtime = ["reqwest"]

[workspace]
members = [".", "greentic-distributor-dev"]
resolver = "2"

[workspace.package]
version = "0.4.2"
edition = "2024"

[workspace.dependencies]
tempfile = "3"
greentic-distributor-client = { path = ".", version = "0.4.1" }

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
greentic-types = "0.4"
greentic-interfaces-guest = { version = "0.4", features = ["distributor-api", "distributor-api-imports"] }
semver = "1"
[dev-dependencies]
httpmock = "0.8"
