[package]
name = "greentic-distributor-dev"
version.workspace = true
edition = "2024"
description = "Dev-only distributor source that serves packs and components from the local filesystem."
license = "MIT"
repository = "https://github.com/greentic/greentic-distributor-client"
homepage = "https://github.com/greentic"
readme = "README.md"

[dependencies]
greentic-distributor-client = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
